--- a/source/worldzhao/index.html
+++ b/source/worldzhao/index.html
@@ -5,7 +5,7 @@ layout: false
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style.css">
-    <title>worldzhao.github.io</title>
+    <title>个人项目</title>
 </head>
 <body>
 <div class="wrapper">
@@ -13,34 +13,34 @@ layout: false
         <div class="item">
             <h1 class="title">【我的博客】</h1>
             <div class="link">
-                <a href="https://worldzhao.github.io/archives/" target="_blank">返回博客</a>
+                <a href="//worldzhao.github.io/archives/" target="_blank">返回博客</a>
                 <span> | </span>
-                <a href="https://github.com/worldzhao" target="_blank">Github️</a>
+                <a href="//github.com/worldzhao" target="_blank">Github️</a>
             </div>
         </div>
         <div class="item">
             <h1 class="title">【网易云音乐-React】</h1>
             <div class="link">
-                <a href="http://worldzhao.github.io/Netease-Music-of-Vue/" target="_blank">点击预览</a>
+                <a href="//worldzhao.github.io/music-react/" target="_blank">点击预览</a>
                 <span> | </span>
-                <a href="https://github.com/worldzhao/music-react" target="_blank">Github️</a>
+                <a href="//github.com/worldzhao/music-react" target="_blank">Github️</a>
             </div>
         </div>
         <div class="item">
             <h1 class="title">【原生JS-音乐播放器】</h1>
             <div class="link">
-                <a href="http://worldzhao.github.io/SoulBeats/" target="_blank">点击预览</a>
+                <a href="//worldzhao.github.io/url-music-player/" target="_blank">点击预览</a>
                 <span> | </span>
-                <a href="https://github.com/worldzhao/SoulBeats" target="_blank">Github️</a>
+                <a href="//github.com/worldzhao/url-music-player" target="_blank">Github️</a>
             </div>
         </div>
         <div class="item">
             <h1 class="title">【移动端组件开发-Dialog】</h1>
             <div class="link">
-                <a href="http://worldzhao.github.io/demo/web%E7%BB%84%E4%BB%B6%E5%BC%80%E5%8F%91-dialog/index.html
+                <a href="//worldzhao.github.io/demo/web%E7%BB%84%E4%BB%B6%E5%BC%80%E5%8F%91-dialog/index.html
 " target="_blank">点击预览</a>
                 <span> | </span>
-                <a href="https://github.com/worldzhao/demo/tree/master/web%E7%BB%84%E4%BB%B6%E5%BC%80%E5%8F%91-dialog"
+                <a href="//github.com/worldzhao/demo/tree/master/web%E7%BB%84%E4%BB%B6%E5%BC%80%E5%8F%91-dialog"
                    target="_blank">Github️</a>
             </div>
         </div>
